# task_cli

./: .gitignore  README.md  main.py  pyproject.toml  testcode.py
env/: pyvenv.cfg
task_manager/: servicetest.py  task.json  task_service.py
